--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Prepare Gradle
         uses: gradle/actions/setup-gradle@v4
 
+      - name: Build OpenRocket
+        run: ./gradlew buildOpenRocket
+
       - name: Build fat-JAR
         run: ./gradlew --no-daemon clean shadowJar
 
