--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,8 +38,9 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
 
       - name: Build OpenRocket
-        run: ./gradlew buildOpenRocket
-             ./gradlew buildExtensions
+        run: |
+          ./gradlew buildOpenRocket
+          ./gradlew buildExtensions
 
       - name: Build fat-JAR
         run: ./gradlew --no-daemon clean shadowJar
